--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <title>GETIX</title>
   </head>
   <body>
+    <!-- 리로드 테스트 26.01.19 15:46 -->
     <!-- 개인 작업 -->
     <!-- 공연 예매 사이트 UX/UI -->
     <!-- YES24와 인터파크를 보며 리뉴얼 구상 -->
